Bug 125334 - Text break is not supported for Bar chart vertical X axis
Summary: Text break is not supported for Bar chart vertical X axis
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-17 09:10 UTC by NISZ LibreOffice Team
Modified: 2019-12-05 09:58 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Calc (18.88 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-05-17 09:11 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-05-17 09:10:49 UTC
Description:
Long text is not broken to multiple lines in case of a bar charts vertically oriented X axis.

Steps to Reproduce:
1.	Create a bar chart in Calc with very long data row labels
2.	Reduce horizontal size of the chart so that long text on the X axis does not fit.
3.	Edit the properties of the X axis ; Choose the “Label” tab and tick “Break” under “Text Flow”


Actual Results:
The long text is not broken to multiple lines

Expected Results:
The long axis labels should be broken to multiple lines.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2019-05-17 09:11:33 UTC
Created attachment 151479 [details]
Example file from Calc
Comment 2 raal 2019-05-17 09:22:45 UTC
Confirm with Version: 6.3.0.0.alpha0+
Build ID: c5c425296debb2fbd67af8ec29f87e285d08575f
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win;
Comment 3 raal 2019-05-17 09:24:32 UTC
reproducible with Version: 4.2.0.0.alpha1+
Build ID: fc8f44e82de4ebdd50ac5fbb9207cd1a59a927e3
Comment 4 Commit Notification 2019-05-17 22:07:20 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/75ef0e41ea8a9096ac619356d2b837c5333b47e6%5E%21

tdf#125334 Chart: allow text break in bar chart axis labels

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.