tdf#125334 Chart: allow text break in bar chart axis labels

Now vertical category axis labels support text breaking.

Change-Id: I8b1c6eff921ea999bc4f745aa5f85bae278e735b
Reviewed-on: https://gerrit.libreoffice.org/72457
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>